[gd_scene load_steps=5 format=2]

[ext_resource path="res://SceneManager/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OldNewspaperTypes.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SceneManager/Pictures/LVL1-END2.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CenterContainer"]
margin_left = 112.0
margin_right = 912.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 200 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 340.0

[node name="TextureRect" type="TextureRect" parent="Control/CenterContainer2"]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
texture = ExtResource( 3 )

[node name="charTimer" type="Timer" parent="Control"]

[node name="DialogueDelay" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/charTimer" to="." method="_on_charTimer_timeout"]
[connection signal="timeout" from="Control/DialogueDelay" to="." method="_on_DialogueDelay_timeout"]
